# 2N-Analyser

./: CMakeLists - Copy.txt  CMakeLists.txt  DetectorSimulationAnalyser.C  New Text Document - Copy (2).txt  New Text Document - Copy.txt  New Text Document.txt  Peak finder.txt  Replace.cpp  TruthLevelAnalyser.c  git_handle.sh  main.c  run.sh  runAndDebug.sh  simple_draw - Copy (3).txt  simple_draw - Copy (5).txt  simple_draw - Copy.txt  zoomed_in_histogram.cpp
Old_analysers/: DetectorSimulationAnalyser.C  TruthLevelAnalyser.c
TempInclude/: DetectorSimulationAnalyser_Histograms_Temp.C
TempInclude/Classes/HistogramsTemp/: HistogramsTemp.cpp  HistogramsTemp.h
macros/: AMapsDiveTest.cpp  BetaFitAndSave.cpp  BetaFitAndSaveApprax.cpp  GraphPlotter1D.cpp  MCtoDATAcomp - Copy (2).cpp  MCtoDATAcomp - Copy.cpp  MomResDebug.cpp  MomResDebug_2.cpp  PlotsBeta4x4.cpp  PlotsEffAndACorr2x3.cpp  PoliFitter - Copy.cpp  PoliFitter.cpp  neutron_multi_counter.cpp  noNCdebugger.cpp  plots4x4.txt  plotter.cpp  plotter_1x1.cpp  plotter_1x2.cpp  plotter_2x2.cpp  process_events.C
macros/MScThesisPlotter/: AMapsPlotter - Copy.cpp  AMapsPlotter.cpp  CombineHistogramsToGif.cpp  FSRPlotter.cpp  GraphPlotter1D.cpp  HistPlotter1D.cpp  HistPlotter2D.cpp  HistPlotterStack - Original.cpp  HistPlotterStack.cpp  HistPlotterStack0.cpp  HistPlotterStack1 - Original.cpp  HistPlotterStack1.cpp  Histofinder1D.cpp  Histofinder2D - Copy.cpp  Histofinder2D.cpp  MScThesisPlotter - Original.cpp  MScThesisPlotter.cpp  MomResSlicePlotter.cpp  TitleAligner.cpp  zoom_in_draw.txt
macros/Other/: New Text Document - Copy (2) - Copy.txt  New Text Document - Copy (3) - Copy.txt  db_script.txt  histogram_macro.cpp  process_events.C  simple_draw - Copy (2).txt  simple_draw - Copy (3) copy.txt  simple_draw - Copy (4) - Copy.txt  simple_draw - Copy (4).txt  simple_draw copy.txt  simple_draw.txt
macros/PlotsEffAndACorr2x3/: PlotsACorr2x3Electron.cpp  PlotsACorr2x3Nucleon.cpp  PlotsEff2x3.cpp  PlotsEff2x3Electron.cpp  PlotsEff2x3Nucleon.cpp
macros/PrintCanvasToPDF/: SaveHistogramsToPDF.cpp  monitor_ep.cpp  monitor_ep2.cpp
setup/: TruthLevelAnalyser.h  codeSetup.h  gst.h
setup/CLAS12DAnalysis/CLAS12DASettings/: CLAS12DASettings.cpp  CLAS12DASettings.h
setup/CLAS12DAnalysis/CLAS12DAnalyser/: CLAS12DAnalyser.cpp  CLAS12DAnalyser.h
setup/CLAS12DAnalysis/CLAS12DHistograms/: CLAS12DHistograms.cpp  CLAS12DHistograms.h
setup/samples/: Q2_testing_samples.h  Uniform_samples.h
source/: constants.h
source/Structures_beta/: Histogram1D.cpp
source/classes/AMaps/: AMaps.cpp  AMaps.h  CustomSliceLimits.h
source/classes/CLAS1212Debugger/: CLAS1212Debugger.cpp  CLAS1212Debugger.h
source/classes/CLAS12Analysis/: CLAS12Analysis.cpp  CLAS12Analysis.h
source/classes/DEfficiency/: DEfficiency.cpp  DEfficiency.h
source/classes/DSCuts/: DSCuts.h
source/classes/DataAnalyser/: DataAnalyser.cpp  DataAnalyser.h
source/classes/Debugger/: Debugger.cpp  Debugger.h
source/classes/Directories/: Directories.cpp  Directories.h
source/classes/ExperimentParameters/: ExperimentParameters.cpp  ExperimentParameters.h
source/classes/MomentumResolution/: MomentumResolution.cpp  MomentumResolution.h
source/classes/ParticleID/: ParticleID.cpp  ParticleID.h
source/classes/RecoAnalyser/: RecoAnalyser.cpp  RecoAnalyser.h
source/classes/RecoSettings/: RecoSettings.cpp  RecoSettings.h
source/classes/Settings/: CustomPlotsDirectory.cpp  CustomPlotsDirectory.h  Settings.cpp  Settings.h
source/classes/TLCuts/: TLCuts.cpp  TLCuts.h
source/classes/TargetParameters/: TargetParameters.h
source/classes/clas12ana/: clas12ana.cpp  clas12ana.h  clas12ana_ver_1_myedit.h  clas12debug.cpp  clas12debug.h  example_ana - Copy.cpp
source/classes/hData/: hData.cpp  hData.h
source/classes/hPlots/: hPlot1D.cpp  hPlot1D.h  hPlot1DStack.cpp  hPlot1DStack.h  hPlot2D.cpp  hPlot2D.h
source/data/NucleonCuts/: Nucleon_Cuts_-_C12_simulation_6GeV_T5.par  Nucleon_Cuts_-_C12_simulation_6GeV_T5_first_10.par  Nucleon_Cuts_-_C12_simulation_6GeV_T5_first_100.par  Nucleon_Cuts_-_C12_simulation_6GeV_T5_first_250.par  Nucleon_Cuts_-_C12_simulation_G18_2GeV.par  Nucleon_Cuts_-_C12_simulation_G18_Q204_6GeV.par  Nucleon_Cuts_-_C12_simulation_G18_Q208_6GeV.par  Nucleon_Cuts_-_C12x4_data_6GeV.par  Nucleon_Cuts_-_C12x4_data_6GeV_run_015186.par  Nucleon_Cuts_-_C12x4_data_6GeV_run_015187.par  Nucleon_Cuts_-_C12x4_data_6GeV_run_015188.par  Nucleon_Cuts_-_C12x4_simulation_G18_Q204_6GeV - Copy.par  Nucleon_Cuts_-_Ca48_simulation_G18_10a_02_11b_6GeV.par  Nucleon_Cuts_-_Uniform_1e_sample_2070MeV.par  Nucleon_Cuts_-_Uniform_1e_sample_4029MeV.par  Nucleon_Cuts_-_Uniform_1e_sample_5986MeV.par  Nucleon_Cuts_-_Uniform_en_sample_2070MeV.par  Nucleon_Cuts_-_Uniform_en_sample_4029MeV.par  Nucleon_Cuts_-_Uniform_en_sample_5986MeV.par  Nucleon_Cuts_-_Uniform_ep_sample_2070MeV.par  Nucleon_Cuts_-_Uniform_ep_sample_4029MeV.par  Nucleon_Cuts_-_Uniform_ep_sample_5986MeV.par
source/data/PIDCuts/: Fitted_PID_Cuts_-_C12_simulation_6GeV_T5.par  Fitted_PID_Cuts_-_C12_simulation_6GeV_T5_first_10.par  Fitted_PID_Cuts_-_C12_simulation_6GeV_T5_first_100.par  Fitted_PID_Cuts_-_C12_simulation_6GeV_T5_first_250.par  Fitted_PID_Cuts_-_C12_simulation_G18_2GeV.par  Fitted_PID_Cuts_-_C12_simulation_G18_Q204_6GeV.par  Fitted_PID_Cuts_-_C12_simulation_G18_Q208_6GeV.par  Fitted_PID_Cuts_-_C12x4_data_6GeV.par  Fitted_PID_Cuts_-_C12x4_data_6GeV_run_015188.par  Fitted_PID_Cuts_-_C12x4_simulation_G18_Q204_6GeV.par  Fitted_PID_Cuts_-_Ca48_simulation_G18_10a_02_11b_6GeV.par  Fitted_PID_Cuts_-_Uniform_1e_sample_2070MeV.par  Fitted_PID_Cuts_-_Uniform_1e_sample_4029MeV.par  Fitted_PID_Cuts_-_Uniform_1e_sample_5986MeV.par  ana.par  (+6 more)
source/functions/: FillByInt.h  GeneralFunctions.h  GetPi0MomTh.h  GetTruthLevelCuts.h  HistogramPlottingFunctions.h  NeutronECAL_Cut_Veto.h  PlotsEff2x3.h  StackPlot3.h  StackPlot4.h  TLKinCutsCheck.h  drawtext.h  findSubstring.h  neutron_veto.h  quit.h  to_string_with_precision.h
source/other/: fitexample - Copy.c  fitexample.c  hPlot1D_example.cpp
(+900 files in other folders)
